--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,10 @@
                 <a class="nav-link "href="/contact">Contact us</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" method="POST" action="/search" role="search">
+              {% csrf_token %}
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit" name="search" id="search">Search</button>
             </form>
           </div>
         </div>
